--- a/src/index.css
+++ b/src/index.css
@@ -33,3 +33,26 @@ hr {
   height: 1px;
   margin: 5px 0;
 }
+
+.main-dashboard-container {
+  display: flex;
+  flex-direction: column-reverse;
+}
+
+
+.details-container {
+  display: flex;
+  gap: 20px;
+}
+
+.details-img {
+flex: 1;
+display: flex;
+flex-direction: column;
+
+}
+
+
+.details-body {
+  flex: 2;
+}
